syntax = "proto3";
package storespb;

service StoresService {
  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse) {}
  rpc GetStore(GetStoreRequest) returns (GetStoreResponse) {}
  rpc GetStores(GetStoresRequest) returns (GetStoresResponse) {}
  rpc EnableParticipation(EnableParticipationRequest) returns (EnableParticipationResponse) {}
  rpc DisableParticipation(DisableParticipationRequest) returns (DisableParticipationResponse) {}
  rpc GetParticipatingStores(GetParticipatingStoresRequest) returns (GetParticipatingStoresResponse) {}

  rpc AddProduct(AddProductRequest) returns (AddProductResponse) {}
  rpc RemoveProduct(RemoveProductRequest) returns (RemoveProductResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse) {}
}

// store product
message Store {
  string id = 1;
  string name = 2;
  string location = 3;
  bool participating = 4;
}

message Product {
  string id = 1;
  string store_id = 2;
  string name = 3;
  string description = 4;
  string sku = 5;
  double price = 6;
}

// create store
message CreateStoreRequest {
  string name = 1;
  string location = 2;
}
message CreateStoreResponse {
  string id = 1;
}

// get store
message GetStoreRequest {
  string id = 1;
}
message GetStoreResponse {
  Store store = 1;
}

// get stores
message GetStoresRequest {}
message GetStoresResponse {
  repeated Store stores = 1;
}

// enable participation
message EnableParticipationRequest {
  string id = 1;
}
message EnableParticipationResponse {}

// disable participation
message DisableParticipationRequest {
  string id = 1;
}
message DisableParticipationResponse {}

// get participating store
message GetParticipatingStoresRequest {}
message GetParticipatingStoresResponse {
  repeated Store stores = 1;
}

// add product
message AddProductRequest {
  string store_id = 1;
  string name = 2;
  string description = 3;
  string sku = 4;
  double price = 5;
}
message AddProductResponse {
  string id = 1;
}

// remove product
message RemoveProductRequest {
  string id = 1;
}
message RemoveProductResponse {}

// get product
message GetProductRequest {
  string id = 1;
}
message GetProductResponse {
  Product product = 1;
}

// get catalog
message GetCatalogRequest {
  string store_id = 1;
}
message GetCatalogResponse {
  repeated Product products = 1;
}
